# c-cmake-gtest-gbench-starter

./: .gitattributes  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
bench/: CMakeLists.txt  xs1024_bench.cc
include/xs/: xs1024.h
src/: CMakeLists.txt  xs1024.c
test/: CMakeLists.txt  run_all.cc  xs1024_spec.cc
